--- a/donate.css
+++ b/donate.css
@@ -1,5 +1,8 @@
+body {
+  background-color: #080f2b;
+}
 .slider {
-    content: CASH;
+    content: "";
     position: absolute;
     color: #ffc916;
     display: inline-block;
@@ -10,12 +13,12 @@
     background-color: #004aad;
     border-radius: 30px;
     transition: background-color 0.5s ease;
-    left: 100px;
+    left: 150px;
     top: 100px;
   }
   
   .slider:after {
-    content: "CASH";
+    content: "";
     align-items: ;
     color: YELLOW;
     font-size: 12PX;
@@ -40,31 +43,152 @@
     opacity: 0;
 
   }
-  #name {
-    width: 400px;
+  #name-box {
+    width: 600px;
     border: 2px solid #ffc916;
     height: 40px;
+    background-color: #080f2b;
+    position: absolute;
+    left: 50px;
+    color:#ffc916;
+    top: -5px;
+    outline: none;
   }
-  #amount {
-    width: 400px;
+  #amount-box {
+    width: 600px;
     border: 2px solid #ffc916;
     height: 40px;
+    position: absolute;
+    background-color: #080f2b;
+    left: 50px;
+    outline: none;
+    color: #ffc916 ;
+    top: 100px;
   }
   .donate {
-        width: 150px;
+        width: 200px;
         height: 50px;
         border-radius: 30px;
         background-color: #ffc916;
         position: absolute;
         color:#080f2b;
-        left: 100px;
+        left: 250px;
         top: 300px;
+        font-size: 25px;
   }
   h1 {
     position: absolute;
-    left: 600px;
+    left: 700px;
+    top: 5px;
+    color: white;
+    font-size: 50px;
   }
   .form {
     position: absolute;
     top: 300px;
   }
+  .bg-image {
+    width: 100%;
+    height: 100%;
+  }
+  .name {
+    color: white;
+    position: absolute;
+    top: -40px;
+    left: 50px;
+    width: 400px;
+    word-spacing: 5px;
+  }
+  .amount {
+    color: white;
+    position: absolute;
+    left: 50px;
+    width: 400px;
+    top: 70px;
+    word-spacing: 5px;
+  }
+  input[type="checkbox"]{
+    position: absolute;
+    top: 500px;
+    left: 60px;
+    background-color: #080f2b;
+    border: 2px solid #ffc916;
+    width: 20px;
+    height: 20px;
+    appearance: none;
+    cursor: pointer;
+  }
+ 
+  input[type="checkbox"]:checked {
+    background-color:#080f2b;
+  }
+  input[type=checkbox]:checked::after {
+    content: "✓"; 
+    font-size: 30px;  
+    color:#ffc916;
+    transform: rotate(15deg);
+    position: absolute;
+    top: -10px;
+     }
+  .checkbox-text {
+      color:#ffc916;
+      position: absolute;
+      top: 505px;
+      left: 100px;
+      font-size: 16px;
+      
+     }
+  .donate-text1 {
+    width: 500px;
+    color: white;
+    position: absolute;
+    top: 150px;
+    left: 1000px;
+    word-spacing: 10px;
+    line-height: 40px;
+
+  }
+  .donate-text2 {
+    width: 130px;
+    color:#ffc916;
+    position: absolute;
+    top: 450px;
+    left: 1000px;
+    word-spacing: 10px;
+    line-height: 40px;
+
+  }
+  .donate-text3 {
+    width: 130px;
+    color:white;
+    position: absolute;
+    top: 450px;
+    left: 1000px;
+    word-spacing: 10px;
+    line-height: 40px;
+
+  }
+  
+  .line-md--phone-call-loop {
+    display: inline-block;
+    width: 3em;
+    height: 3em;
+    position: absolute;
+    left: 1000px;
+    top: 800px;
+    background-repeat: no-repeat;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='white' stroke-linecap='round' stroke-linejoin='round' stroke-width='2'%3E%3Cpath stroke-dasharray='64' stroke-dashoffset='64' d='M8 3C8.5 3 10.5 7.5 10.5 8C10.5 9 9 10 8.5 11C8 12 9 13 10 14C10.3943 14.3943 12 16 13 15.5C14 15 15 13.5 16 13.5C16.5 13.5 21 15.5 21 16C21 18 19.5 19.5 18 20C16.5 20.5 15.5 20.5 13.5 20C11.5 19.5 10 19 7.5 16.5C5 14 4.5 12.5 4 10.5C3.5 8.5 3.5 7.5 4 6C4.5 4.5 6 3 8 3Z'%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' dur='0.6s' values='64;0'/%3E%3CanimateTransform attributeName='transform' begin='0.6s;lineMdPhoneCallLoop0.begin+2.6s' dur='0.5s' type='rotate' values='0 12 12;15 12 12;0 12 12;-12 12 12;0 12 12;12 12 12;0 12 12;-15 12 12;0 12 12'/%3E%3C/path%3E%3Cpath stroke-dasharray='4' stroke-dashoffset='4' d='M14 7.04404C14.6608 7.34734 15.2571 7.76718 15.7624 8.27723M16.956 10C16.6606 9.35636 16.2546 8.77401 15.7624 8.27723' opacity='0'%3E%3Cset id='lineMdPhoneCallLoop0' attributeName='opacity' begin='0.7s;lineMdPhoneCallLoop0.begin+2.7s' to='1'/%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' begin='0.7s;lineMdPhoneCallLoop0.begin+2.7s' dur='0.2s' values='4;8'/%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' begin='1.3s;lineMdPhoneCallLoop0.begin+3.3s' dur='0.3s' values='0;4'/%3E%3Cset attributeName='opacity' begin='1.6s;lineMdPhoneCallLoop0.begin+3.6s' to='0'/%3E%3C/path%3E%3Cpath stroke-dasharray='10' stroke-dashoffset='10' d='M20.748 9C20.3874 7.59926 19.6571 6.347 18.6672 5.3535M15 3.25203C16.4105 3.61507 17.6704 4.3531 18.6672 5.3535' opacity='0'%3E%3Cset attributeName='opacity' begin='1s;lineMdPhoneCallLoop0.begin+3s' to='1'/%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' begin='1s;lineMdPhoneCallLoop0.begin+3s' dur='0.2s' values='10;20'/%3E%3Canimate fill='freeze' attributeName='stroke-dashoffset' begin='1.5s;lineMdPhoneCallLoop0.begin+3.5s' dur='0.3s' values='0;10'/%3E%3Cset attributeName='opacity' begin='1.8s;lineMdPhoneCallLoop0.begin+3.8s' to='0'/%3E%3C/path%3E%3C/g%3E%3C/svg%3E");
+  }
+  .clarity--email-solid {
+    display: inline-block;
+    width: 2em;
+    height: 2em;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: 1000px;
+    top: 900px;
+    background-size: 100% 100%;
+    background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 36 36'%3E%3Cpath fill='white' d='M32.33 6a2 2 0 0 0-.41 0h-28a2 2 0 0 0-.53.08l14.45 14.39Z' class='clr-i-solid clr-i-solid-path-1'/%3E%3Cpath fill='white' d='m33.81 7.39l-14.56 14.5a2 2 0 0 1-2.82 0L2 7.5a2 2 0 0 0-.07.5v20a2 2 0 0 0 2 2h28a2 2 0 0 0 2-2V8a2 2 0 0 0-.12-.61M5.3 28H3.91v-1.43l7.27-7.21l1.41 1.41Zm26.61 0h-1.4l-7.29-7.23l1.41-1.41l7.27 7.21Z' class='clr-i-solid clr-i-solid-path-2'/%3E%3Cpath fill='none' d='M0 0h36v36H0z'/%3E%3C/svg%3E");
+  }
+  
