--- a/index.css
+++ b/index.css
@@ -15,7 +15,13 @@ body {
     position: absolute;
 }
 .nav {
-
+    position: fixed;
+    top: 0;
+    width: 100%;
+    background-color: #f8f9fa;
+    padding: 10px 20px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
 }
 ul {
     list-style-type: none;
@@ -24,10 +30,16 @@ ul {
     right: 200px;
     display: block;
     z-index: 1;
+    text-decoration: none;
   }
 li {
     display: inline-block;
     padding: 20px;
+    color: #fdc00f;
+    
+}
+a {
+    text-decoration: none;
     color: #fdc00f;
 }
 .ep--arrow-down-bold {
@@ -48,7 +60,7 @@ li {
     border-radius: 5px;
     position: absolute;
     top: 35px;
-    right: 100px;
+    right: 70px;
     z-index: 1;
     
 }
@@ -76,6 +88,9 @@ li {
     position: absolute;
     top: 1200px;
     left: 20%;
+    padding-bottom: 20px;
+    padding-left: 20px;
+    padding-right:;
 }
 
 
@@ -149,4 +164,35 @@ h4 {
     top: -570px;
     left: 800px;
     color: #004aad;
+}
+.hours {
+    position: relative;
+    top: -550px;
+    left: 500px;
+}
+.Volunteer{
+    position: relative;
+    top: -400px;
+    left: 500px;
+}
+.increase{
+    position: relative;
+    top: -280px;
+    left: 500px;
+    width: 300px;
+}
+.attendance{
+    position: relative;
+    top: -620px;
+    left: 780px;
+}
+.positive {
+    position: relative;
+    top: -475px;
+    left: 780px;
+}
+.scholar {
+    position: relative;
+    top: -355px;
+    left: 780px;
 }
