--- a/index.css
+++ b/index.css
@@ -53,16 +53,21 @@ a {
     background-size: 100% 100%;
     background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 1024 1024'%3E%3Cpath fill='%23fdc00f' d='M104.704 338.752a64 64 0 0 1 90.496 0l316.8 316.8l316.8-316.8a64 64 0 0 1 90.496 90.496L557.248 791.296a64 64 0 0 1-90.496 0L104.704 429.248a64 64 0 0 1 0-90.496'/%3E%3C/svg%3E");
   }
-.SignUp {
+#signUp {
     padding: 10px;
     background-color: #fdc00f;
     width: 50px;
     border-radius: 5px;
     position: absolute;
+    color: black;
     top: 35px;
     right: 70px;
     z-index: 1;
     
+}
+#signUp:hover {
+    background-color: black;
+    color: #fdc00f;
 }
 .title {
     color: white;
@@ -77,6 +82,17 @@ a {
   left: 50px;
   top: 200px;
   z-index: 1;
+
+}
+.donate #donate{
+    padding: 20px 40px 20px 40px;
+    background-color: #fdc00f;
+    color: black;
+    font-size: 25px;
+    z-index: 1;
+    position: absolute;
+    top: 800px;
+    left: 300px;
 
 }
 .block {
