--- a/index.css
+++ b/index.css
@@ -6,6 +6,12 @@ body {
 .img2, .img3 {
     width: 100%;
 }
+.img2{
+    height: 1300px;
+}
+.img2{
+    height: 1100px;
+}
 .overlay {
     width: 100%;
     height: 550%;
@@ -92,7 +98,7 @@ a {
     z-index: 1;
     position: absolute;
     top: 800px;
-    left: 300px;
+    left: 250px;
 
 }
 .block {
@@ -212,3 +218,289 @@ h4 {
     top: -355px;
     left: 780px;
 }
+.ph--diamond-thin {
+    display: inline-block;
+    width: 14em;
+    height: 14em;
+    position: absolute;
+    z-index: 1;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 256 256'%3E%3Cpath fill='%23000' d='m232.5 119.55l-96.05-96.06a12 12 0 0 0-16.9 0l-96 96.06a12 12 0 0 0 0 16.9l96.05 96.06a12 12 0 0 0 16.9 0l96.05-96.06a12 12 0 0 0 0-16.9Zm-5.66 11.24l-96.05 96.06a4 4 0 0 1-5.58 0l-96-96.06a3.94 3.94 0 0 1 0-5.58l96.05-96.06a4 4 0 0 1 5.58 0l96.05 96.06a3.94 3.94 0 0 1 0 5.58Z'/%3E%3C/svg%3E");
+    background-color: #fdc00f;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+  .diamond1 .ph--diamond-thin {
+    left: 300px;
+    top: 1800px;
+  }
+  .diamond2 .ph--diamond-thin {
+    left: 1050px;
+    top: 1800px;
+  }
+  .diamond3 .ph--diamond-thin {
+    left: 300px;
+    top: 2100px;
+    background-color: black;
+  }
+  .vision h1 {
+    position: absolute;
+    z-index: 1;
+    left: 550px;
+    top: 1850px;
+    color: #fdc00f;
+  }
+  .vision h5 {
+    position: absolute;
+    z-index: 1;
+    left: 550px;
+    top: 1900px;
+    width: 400px;
+    color: white;
+  }
+  .mission h1 {
+    position: absolute;
+    z-index: 1;
+    left: 1300px;
+    top: 1850px;
+    color: #fdc00f;
+  }
+  .mission h5 {
+    position: absolute;
+    z-index: 1;
+    left: 1300px;
+    top: 1900px;
+    width: 300px;
+    color: white;
+  }
+   .Goals h1 {
+    position: absolute;
+    left: 510px;
+    top: 2150px;
+    z-index: 2;
+    color: black;
+  }
+  .Goals h5 {
+    position: absolute;
+    z-index: 1;
+    left: 510px;
+    top: 2200px;
+    width: 300px;
+    color: white;
+    z-index: 2;
+    font-size: 15px;
+  }
+  .game-icons--binoculars {
+    display: inline-block;
+    width: 7em;
+    height: 7em;
+    z-index: 1;
+    position: absolute;
+    top: 1850px;
+    left: 357px;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3Cpath fill='%23000' d='M186.436 86.738c-9.044 0-19.112 5.87-26.735 21.114l-6.807 13.62c2.48-.203 4.968-.31 7.455-.31c18.02 0 36.005 5.363 51.87 15.977v-30.984c-7.5-13.917-17.102-19.418-25.782-19.418zm139.128 0c-8.68 0-18.28 5.5-25.78 19.418v30.994c18.064-12.06 38.895-17.28 59.345-15.638l-6.83-13.66c-7.624-15.245-17.692-21.114-26.736-21.114zm-165.216 51.926c-19.05 0-38.08 7.693-53.74 23l-37.38 65.418c14.492-6.743 30.633-10.518 47.64-10.518c39.96 0 75.16 20.792 95.35 52.124V159.846c-15.293-14.115-33.58-21.182-51.87-21.182m192.433.033c-18.662-.306-37.39 6.74-52.997 21.145v108.845c20.19-31.33 55.39-52.123 95.348-52.123c17.01 0 33.15 3.775 47.643 10.518l-37.38-65.418c-15.35-15.003-33.95-22.66-52.612-22.967zM256 151.957c-5.113 0-11.882 2.775-25.783 9.627v133.014c7.246-5.314 16.164-8.467 25.783-8.467s18.537 3.154 25.783 8.468V161.584c-13.9-6.852-20.67-9.627-25.783-9.627m-139.13 82.607c-52.767 0-95.35 42.582-95.35 95.348s42.583 95.35 95.35 95.35c52.765 0 95.347-42.584 95.347-95.35s-42.582-95.348-95.348-95.348zm278.26 0c-52.765 0-95.347 42.582-95.347 95.348s42.582 95.35 95.348 95.35c52.767 0 95.35-42.584 95.35-95.35s-42.583-95.348-95.35-95.348zm-279.827 19.004a80 80 0 0 1 3.674.03c7.344.225 14.694 1.462 21.77 3.816c36.842 11.343 59.745 51.664 50.622 89.11c-7.652 37.743-45.455 64.51-83.595 59.17c-38.748-3.865-69.376-39.578-67.16-78.483c.167-11.41 3.133-22.336 8.2-32.124A26.09 26.09 0 0 0 73.39 312.52a26.087 26.087 0 0 0 26.09-26.084a26.09 26.09 0 0 0-17.447-24.584c9.058-4.694 19.097-7.594 29.606-8.147a84 84 0 0 1 3.663-.137zm278.26 0a80 80 0 0 1 3.673.03c7.344.225 14.696 1.462 21.774 3.816c36.84 11.343 59.742 51.664 50.62 89.11c-7.652 37.742-45.453 64.51-83.59 59.173c-38.75-3.865-69.38-39.582-67.163-78.488c.167-11.41 3.133-22.334 8.2-32.122a26.09 26.09 0 0 0 24.575 17.433a26.087 26.087 0 0 0 26.086-26.084a26.09 26.09 0 0 0-17.443-24.584c9.057-4.694 19.095-7.594 29.603-8.147q1.829-.108 3.664-.137zM256 304.13c-14.346 0-25.783 11.436-25.783 25.782s11.437 25.783 25.783 25.783s25.783-11.437 25.783-25.783s-11.437-25.78-25.783-25.78z'/%3E%3C/svg%3E");
+    background-color: #fdc00f;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+  .streamline--module-puzzle-3-solid {
+    display: inline-block;
+    width: 5em;
+    height: 5em;
+    z-index: 1;
+    position: absolute;
+    top: 1870px;
+    left: 1120px;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 14 14'%3E%3Cpath fill='%23000' fill-rule='evenodd' d='M1.5 0h4.875v1.158a2.125 2.125 0 1 0 0 4.184v1.033H4.368a.625.625 0 0 0-.466 1.042a.875.875 0 1 1-1.305 0a.625.625 0 0 0-.465-1.042H0V1.5A1.5 1.5 0 0 1 1.5 0M0 7.625V12.5A1.5 1.5 0 0 0 1.5 14h4.875v-2.132a.625.625 0 0 1 1.042-.466a.875.875 0 1 0 0-1.305a.625.625 0 0 1-1.042-.465V7.625H5.342a2.125 2.125 0 1 1-4.184 0zm7.625 0v1.033a2.125 2.125 0 1 1 0 4.184V14H12.5a1.5 1.5 0 0 0 1.5-1.5V7.625h-2.132a.625.625 0 0 1-.466-1.042a.875.875 0 1 0-1.305 0a.625.625 0 0 1-.465 1.042zM14 6.375V1.5A1.5 1.5 0 0 0 12.5 0H7.625v2.132a.625.625 0 0 1-1.042.466a.875.875 0 1 0 0 1.305a.625.625 0 0 1 1.042.465v2.007h1.033a2.125 2.125 0 1 1 4.184 0z' clip-rule='evenodd'/%3E%3C/svg%3E");
+    background-color: #fdc00f;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat; 
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+    .goals-square {
+        width: 600px;
+        height: 400px;
+        background-color: #fdc00f;
+        position: absolute;
+        z-index: 1;
+        top: 2100px;
+        left: 300px;
+        z-index: 1;
+      }
+ 
+  .mage--goals {
+    display: inline-block;
+    width: 7em;
+    height: 7em;
+    position: absolute;
+    top: 55px;
+    left: 55px;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cg fill='none' stroke='%23000' stroke-linecap='round' stroke-linejoin='round' stroke-width='1.5'%3E%3Cpath d='M10.66 10.66A1.9 1.9 0 0 0 10.1 12a1.9 1.9 0 0 0 1.9 1.9a1.9 1.9 0 0 0 1.34-.56'/%3E%3Cpath d='M12 6.3a5.7 5.7 0 1 0 5.7 5.7'/%3E%3Cpath d='M12 2.5a9.5 9.5 0 1 0 9.5 9.5m-5.975-3.524L12.95 11.05'/%3E%3Cpath d='M20.94 5.844L17.7 6.3l.456-3.24a.19.19 0 0 0-.313-.161l-2.148 2.137a1.9 1.9 0 0 0-.513 1.72l.342 1.72l1.72.341a1.9 1.9 0 0 0 1.72-.513L21.1 6.157a.19.19 0 0 0-.162-.313'/%3E%3C/g%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+  .goals-img {
+   position: absolute;
+   top: 2100px;
+   left: 900px;
+   width: 200px;
+   z-index: 1;
+  }
+  .square1 {
+    width: 600px;
+    height: 450px;
+    border: 1.5px solid white;
+    background-color: transparent;
+    position: absolute;
+    top: 3000px;
+    z-index: 1;
+    left: 150px;
+ 
+
+
+  }
+  .square2 {
+    width: 600px;
+    height: 450px;
+    border: 1.5px solid white;
+    background-color: transparent;
+    position: absolute;
+    z-index: 1;
+    top: 3000px;
+    left: 950px;
+
+  } 
+  .square1 ul {
+    padding-top: 150px;
+    left: 20px;
+    
+  }
+  .square2 ul {
+    padding-top: 150px;
+    left: 40px;
+  }
+  .square1 li {
+    color: white;
+    font-size: 22px;
+    width: 500px;
+  }
+  .square2 li {
+    color: white;
+    width: 500px;
+    font-size: 22px;
+  }
+  .fa6-solid--hand-fist {
+    display: inline-block;
+    width: 4em;
+    height: 4em;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 448 512'%3E%3Cpath fill='%23000' d='M192 0c17.7 0 32 14.3 32 32v112h-64V32c0-17.7 14.3-32 32-32M64 64c0-17.7 14.3-32 32-32s32 14.3 32 32v80H64zm192 0c0-17.7 14.3-32 32-32s32 14.3 32 32v96c0 17.7-14.3 32-32 32s-32-14.3-32-32zm96 64c0-17.7 14.3-32 32-32s32 14.3 32 32v64c0 17.7-14.3 32-32 32s-32-14.3-32-32zm-96 88v-.6c9.4 5.4 20.3 8.6 32 8.6c13.2 0 25.4-4 35.6-10.8c8.7 24.9 32.5 42.8 60.4 42.8c11.7 0 22.6-3.1 32-8.6v8.6c0 52.3-25.1 98.8-64 128v96c0 17.7-14.3 32-32 32H160c-17.7 0-32-14.3-32-32v-78.4c-17.3-7.9-33.2-18.8-46.9-32.5l-11.6-11.6c-24-24-37.5-56.6-37.5-90.5v-27c0-35.3 28.7-64 64-64h88c22.1 0 40 17.9 40 40s-17.9 40-40 40h-56c-8.8 0-16 7.2-16 16s7.2 16 16 16h56c39.8 0 72-32.2 72-72'/%3E%3C/svg%3E");
+    background-color: currentColor;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+  .carbon--ibm-engineering-workflow-mgmt {
+    display: inline-block;
+    width: 5em;
+    height: 5em;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 32 32'%3E%3Cpath fill='%23000' d='M31.324 11.261A14.27 14.27 0 0 0 22.25 8H22v2h.25c2.608 0 5.155.837 7.246 2.372a12.18 12.18 0 0 1-7.548 7.036q.052-.605.052-1.22C22 10.366 15.635 4 7.812 4c-.929 0-1.856.09-2.757.268l-.657.13l-.13.657A14.3 14.3 0 0 0 4 7.812c0 4.124 1.78 7.831 4.598 10.426A14.2 14.2 0 0 0 8 22.254l.001.001a14.27 14.27 0 0 0 3.261 9.07l.439.53l.652-.22a14.18 14.18 0 0 0 9.237-10.046a14.18 14.18 0 0 0 10.045-9.237l.22-.652zM12.372 29.496A12.27 12.27 0 0 1 10 22.251c0-.912.113-1.796.303-2.652a14.1 14.1 0 0 0 9.105 2.349a12.18 12.18 0 0 1-7.036 7.548m7.51-9.613q-.833.116-1.694.117c-2.715 0-5.218-.904-7.247-2.412a12.4 12.4 0 0 1 4.048-5.204l-1.28-1.53A14.3 14.3 0 0 0 9.37 16.2A12.14 12.14 0 0 1 6.117 6.117A12 12 0 0 1 7.812 6C14.532 6 20 11.468 20 18.188q0 .862-.117 1.695Z'/%3E%3Ccircle cx='20' cy='2' r='2' fill='%23000'/%3E%3Ccircle cx='27' cy='26' r='2' fill='%23000'/%3E%3Ccircle cx='2' cy='20' r='2' fill='%23000'/%3E%3C/svg%3E");
+    background-color: white;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+ #square-icon1 {
+    position: absolute;
+    left: 200px;
+    top: 10px;
+  }
+  #square-icon2 {
+    position: absolute;
+    left: 200px;
+    top: 10px;
+  }
+.commitment {
+    color: white;
+    position: absolute;
+    top: 2850px;
+    z-index: 1;
+    left: 250px;
+}
+.through {
+    color: white;
+    position: absolute;
+    top: 2850px;
+    z-index: 1;
+    left: 1100px;
+}
+.img4 img{
+    width: 100%;
+    height: 1000px;
+}
+.fa6-solid--handshake {
+    display: inline-block;
+    width: 15em;
+    height: 15em;
+    z-index: 2;
+    position: absolute;
+    top: 4000px;
+    left: 750px;
+    --svg: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 640 512'%3E%3Cpath fill='%23000' d='m323.4 85.2l-96.8 78.4c-16.1 13-19.2 36.4-7 53.1c12.9 17.8 38 21.3 55.3 7.8l99.3-77.2c7-5.4 17-4.2 22.5 2.8s4.2 17-2.8 22.5L373 188.8l139 128V128h-.7l-3.9-2.5L434.8 79c-15.3-9.8-33.2-15-51.4-15c-21.8 0-43 7.5-60 21.2m22.8 124.4l-51.7 40.2c-31.5 24.6-77.2 18.2-100.8-14.2c-22.2-30.5-16.6-73.1 12.7-96.8l83.2-67.3c-11.6-4.9-24.1-7.4-36.8-7.4C234 64 215.7 69.6 200 80l-72 48v224h28.2l91.4 83.4c19.6 17.9 49.9 16.5 67.8-3.1c5.5-6.1 9.2-13.2 11.1-20.6l17 15.6c19.5 17.9 49.9 16.6 67.8-2.9c4.5-4.9 7.8-10.6 9.9-16.5c19.4 13 45.8 10.3 62.1-7.5c17.9-19.5 16.6-49.9-2.9-67.8zM16 128c-8.8 0-16 7.2-16 16v208c0 17.7 14.3 32 32 32h32c17.7 0 32-14.3 32-32V128zm32 192a16 16 0 1 1 0 32a16 16 0 1 1 0-32m496-192v224c0 17.7 14.3 32 32 32h32c17.7 0 32-14.3 32-32V144c0-8.8-7.2-16-16-16zm32 208a16 16 0 1 1 32 0a16 16 0 1 1-32 0'/%3E%3C/svg%3E");
+    background-color: white;
+    -webkit-mask-image: var(--svg);
+    mask-image: var(--svg);
+    -webkit-mask-repeat: no-repeat;
+    mask-repeat: no-repeat;
+    -webkit-mask-size: 100% 100%;
+    mask-size: 100% 100%;
+  }
+  .img4-text {
+    position: absolute;
+    text-align: center;
+    top: 3800px;
+    font-size: 100px;
+    left: 100px;
+    color: white;
+    z-index: 2;
+  }
+
+  .img4-square {
+    position: absolute;
+    width: 1000px;
+    height: 250px;
+    background-color: white;
+    border-radius:2100px;
+    top: 4300px;
+    left: 350px;
+    z-index: 1;
+  }
+  .img4-square h1{
+    font-size: larger;
+    width: 900px;
+    line-height: 40px;
+    text-align: center;
+  }
+  .background {
+    background-color: ;
+  }
